--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "helloworld-nodejs",
-  "version": "1.0.0",
-  "description": "This is my readme.",
+  "version": "1.0.1",
+  "description": "This is my Hello World.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
