--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helloworld-nodejs",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "This is my Hello World.",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/capucinecoudert/helloworld-nodejs#readme",
   "engines": {
-  "node": ">=4.2.4"
+    "node": ">=4.2.4"
+  },
+  "devDependencies": {
+    "node-readme": "^0.1.9"
   }
 }
